--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,16 +8,20 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  pages: write
+  id-token: write
 
 jobs:
   build:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    name: Ruby ${{ matrix.ruby }}
+    name: Build ${{ matrix.ruby }}
     strategy:
       matrix:
         ruby:
           - '3.3.0'
-
     steps:
       - name: Update Release PR
         uses: google-github-actions/release-please-action@v4
@@ -40,6 +44,7 @@ jobs:
 
       - name: Run the default task
         run: bundle exec rake
+
       - name: Publish to GPR
         run: |
           mkdir -p $HOME/.gem
@@ -64,3 +69,14 @@ jobs:
           GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
         if: steps.release.outputs.release_created
 
+      - name: Generate documentation
+        run: bundle exec yard doc
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: './doc'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
