chore: release 0.0.0.pre
release-as: 0.0.0.pre

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
           gem push *.gem
         env:
           GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
-        if: steps.release.outputs.release_created
+#        if: steps.release.outputs.release_created
 
       - name: Generate documentation
         run: bundle exec yard doc
