--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,8 @@ jobs:
         uses: google-github-actions/release-please-action@v4
         id: release
         with:
-          release-type: "ruby"
-          config-file: ".github/workflows/.release-please-manifest.json"
-          manifest-file: ".github/workflows/release-please-config.json"
+          config-file: "ci/.release-please-manifest.json"
+          manifest-file: "ci/release-please-config.json"
       - uses: actions/checkout@v4
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
