--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,11 @@ jobs:
           - '3.3.0'
     steps:
       - name: Update Release PR
-        uses: google-github-actions/release-please-action@v4
+        uses: google-github-actions/release-please-action@v3
         id: release
         with:
-          config-file: "ci/.release-please-manifest.json"
+          release-type: "ruby"
+          changelog-path: "docs/CHANGELOG.md"
       - uses: actions/checkout@v4
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
