feature: broadly, allows `sc2ai new` and `sc2ai ladderzip`
A lot of refactoring and additions needed to allow lader play, including a templated start directory.

feature: Adding templates for sc2ai new and sc2ai ladderzip
feature: Paths#template_root for template sources
feature: during init callback to Bot#configure to define additional attributes
feature: enable_feature_layer/interface_options removed from join_game and added as attributes
feature: removed enable_feature_layer from Sc2 config, and forcing it via Bot#configure
feature: Sc2#is_live? reads bin/ladder env "AIARENA" to toggle live or not
feature: moved /data/replays to ./replays/

--- a/.gitignore
+++ b/.gitignore
@@ -63,8 +63,7 @@ Gemfile.lock
 
 
 # Library specific excludes
-/data/replays/autosave*.SC2Replay
+/replays/*.SC2Replay
 /data/debug_observation.json
-/*.gem
 /test/
 /sc2ai.yml
